third_party/rust/pin-project/tests/ui/cfg/packed_sneaky.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky.rs:6:1
  |
6 | #[hidden_repr_cfg_not_any(packed)] //~ ERROR may not be used on #[repr(packed)] types
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
